--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/webpack": "^5.28.0",
     "css-loader": "^6.6.0",
+    "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.5.3",
     "sass": "^1.49.9",
     "sass-loader": "^12.6.0",
@@ -27,6 +28,7 @@
     "webpack-cli": "^4.9.2"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/webpack-dev-server": "^4.7.2",
